--- a/skillsPage/skillsPage.css
+++ b/skillsPage/skillsPage.css
@@ -19,7 +19,7 @@
     place-items: center;
     width: 50%;
     height: auto;
-    box-shadow: 9px 9px 16px rgb(163, 177, 198, 0.6), -9px -9px 16px rgba(255, 255, 255, 0.5);
+    box-shadow: var(--outer-shadow);
 }
 
 .skill-box i {
