--- a/main.css
+++ b/main.css
@@ -1,22 +1,41 @@
 * {
-    font-size: 10px;
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    overflow: hidden;
+  font-size: 10px;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  overflow: hidden;
 }
-
+@font-face {
+  font-family: headingOfPage;
+  src: url(/FontFamily/VT323/VT323-Regular.ttf);
+}
+@font-face {
+  font-family: courier-font;
+  src: url(/FontFamily/Courier_Prime/CourierPrime-Regular.ttf);
+}
 :root {
-    --primary-color: #e6e7ee;
-    --secondary-color: #2D4CC8;
-    --tertiary-color: #e6e7ee;
-    --primary-font-color: #595c6e;
-    --light-primary-font-color: #898c9d;
-    --main-font-family: 'Bebas Neue', cursive;
-    --second-font-family: 'Oswald', sans-serif;
+  /* Color Section */
+  --bg-color: #e6e9f3;
+  /* --primary-color: #e6e7ee; */
+  --dark-primary-font-color: #100e34;
+  --btn-bg-color: #27263a;
+  --primary-font-color: #595c6e;
+  --light-primary-font-color: #898c9d;
+  /* Font Family */
+
+  --main-font-family: "Bebas Neue", cursive;
+  --second-font-family: "Oswald", sans-serif;
+  --font-for-name: "Staatliches", cursive;
+  --para-heading: "paraHeading", sans-serif;
+  /* Neumorohism Variable */
+  --outer-shadow: 6px 6px 12px rgb(163, 177, 198, 0.6),-6px -6px 12px rgba(255, 255, 255, 0.5) !important;
+  --inner-shadow: inset 2px 2px 5px #b8b9be,inset -3px -3px 7px #fff!important;
+  --border-for-shadow: 1rem;
+  --padding-for-shadow: 2rem 1rem;
+  --margin-top-bottom: 2rem 0;
 }
 
-@import url('https://fonts.googleapis.com/css2?family=Allerta+Stencil&family=Bebas+Neue&family=Oswald&family=Staatliches&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Allerta+Stencil&family=Bebas+Neue&family=Oswald&family=Staatliches&display=swap");
 
 /* @font-face {
     font-family: "linea-basic-10";
@@ -25,103 +44,117 @@
     /* font-weight: normal;
     font-style: normal 
 } */
-body[data-nav="true"]>main {
-    transform: translateY(-10%);
+body[data-nav="true"] > main {
+  transform: translateY(-10%);
+  background-color: var(--bg-color) !important;
+}
+/* body[data-nav="false"] > main{
+    background-color: black !important;
+} */
+body{
+    background-color: var(--bg-color) !important;
+    color: var(--primary-font-color);
+}
+/* This CSS apply on all pages */
+header {
+  height: 10vh;
+}
 
-}
-body.dark{
-    background-color: #0077b5;
-}
 main {
-    transition: transform 500ms cubic-bezier(.13, .53, .38, .97);
+  transition: transform 500ms cubic-bezier(0.13, 0.53, 0.38, 0.97);
 }
-
+hr{
+  margin: 2rem 0;
+}
+.all-page-heading {
+  font-size: 7rem;
+  color: var(--dark-primary-font-color);
+  font-family: headingOfPage;
+}
 /* Dark Mode Button CSS */
-.darkmode-div{
-    border: 2px solid red;
-    padding: 2rem;
+.darkmode-div {
+  border: 2px solid red;
+  padding: 2rem;
 }
 /* Navigation Button */
 #nav-toggle {
-    z-index: 3;
-    /* background-color: black; */
-    position: absolute;
-    left: 50%;
-    top: 90%;
-    border: none;
-    background: transparent;
+  z-index: 3;
+  /* background-color: black; */
+  position: absolute;
+  left: 50%;
+  top: 90%;
+  border: none;
+  background: transparent;
 }
 #navbar {
-    height: 33vh;
-    width: 100%;
-    z-index: 1;
-    position: absolute;
-    left: 0%;
-    bottom: 0;
-    transition: 0.5s all;
+  height: 33vh;
+  width: 100%;
+  z-index: 1;
+  position: absolute;
+  left: 0%;
+  bottom: 0;
+  transition: 0.5s all;
 }
 
 #navbar.hidden {
-    transform: translateY(100%);
-    visibility: hidden;
+  transform: translateY(100%);
+  visibility: hidden;
 }
 
 .navbar-links {
-    display: grid;
-    grid-template-columns: repeat(4, 1fr);
-    gap: clamp(1rem, 2vw, 2rem);
-    /* margin-top: clamp(2rem, 2vw, 3rem); */
-    padding: 0rem clamp(1rem, 2vw, 2rem);
-    transition: transform 500ms cubic-bezier(.13, .53, .38, .97);
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  gap: clamp(1rem, 2vw, 2rem);
+  /* margin-top: clamp(2rem, 2vw, 3rem); */
+  padding: 0rem clamp(1rem, 2vw, 2rem);
+  transition: transform 500ms cubic-bezier(0.13, 0.53, 0.38, 0.97);
 }
 /* .navbar-links:hover{
     opacity: .5;
 } */
-.navbar-card{
-    margin: 2rem 0;
-    text-decoration: none;
+.navbar-card {
+  margin: 2rem 0;
+  text-decoration: none;
 }
-.navbar-card:hover{
-    transition: all .9s;
-    box-shadow: 9px 9px 16px rgb(163, 177, 198, 0.6), -9px -9px 16px rgba(255, 255, 255, 0.5);
+.navbar-card:hover {
+  transition: all 0.9s;
+  box-shadow: var(--outer-shadow);
 }
 .navbar-links h2 {
-    padding-left: 2rem;
-    font-size: 2rem;
-    background: var(--primary-color);
-    color: var(--primary-font-color);
-    font-family: var(--main-font-family);
+  padding-left: 2rem;
+  font-size: 2rem;
+  background: var(--bg-color);
+  color: var(--primary-font-color);
+  font-family: headingOfPage;
 }
-.navbar-card img{
-    /* height: 100%;
-    width: 100%; */
-    height: 100%;
-    width: 100%;
+.navbar-card img {
+  height: 100%;
+  width: 100%;
 }
 .homepage_section {
-    background-color: var(--primary-color);
-    width: 100vw;
-    height: 100vh;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    z-index: 2;
+  background-color: var(--bg-color);
+  width: 100vw;
+  height: 100vh;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  z-index: 2;
 }
 
 .primary-heading-of-homepage {
-    position: relative;
-    top: 20rem;
-    line-height: 6rem;
-    font-size: 5rem;
-    font-family: var(--main-font-family);
-    font-family: 'Staatliches', cursive;
-    color: var(--primary-font-color);
+  position: relative;
+  top: 20rem;
+  line-height: 6rem;
+  font-size: 5rem;
+  /* font-family: var(--main-font-family); */
+  font-family: var(--font-for-name);
+  color: var(--primary-font-color);
 }
 
 #primary-sub-heading-of-homepage {
-    font-family: var(--second-font-family);
-    color: var(--light-primary-font-color);
-    /* background-color: linear-gradient(
+  font-family: var(--second-font-family);
+  color: var(--light-primary-font-color);
+  /* background-color: linear-gradient(
         to right,
         var(--secondary-color),
         var(--light-primary-font-color),
@@ -135,199 +168,190 @@ main {
 
 /* Responsive Section */
 @media (max-width: 734px) {
-    .primary-heading-of-homepage {
-        font-size: 4rem;
-    }
-    #navbar {
-        height: 27vh;
-    }
-    
+  .primary-heading-of-homepage {
+    font-size: 4rem;
+  }
+  #navbar {
+    height: 27vh;
+  }
 }
 
 @media (max-width: 517px) {
-    .primary-heading-of-homepage {
-        font-size: 3rem;
-        line-height: 5rem;
-    }
-    #navbar {
-        height: 23vh;
-    }
-    .navbar-links h2 {
-        font-size: 1.5rem;
-    }
+  .primary-heading-of-homepage {
+    font-size: 3rem;
+    line-height: 5rem;
+  }
+  #navbar {
+    height: 23vh;
+  }
+  .navbar-links h2 {
+    font-size: 1.5rem;
+  }
 }
 
 @media (max-width: 407px) {
-    #primary-sub-heading-of-homepage {
-        font-size: 2.5rem;
-        line-height: 3rem;
-    }
+  #primary-sub-heading-of-homepage {
+    font-size: 2.5rem;
+    line-height: 3rem;
+  }
 }
 
 @media (max-width: 300px) {
-    .primary-heading-of-homepage {
-        font-size: 2rem;
-    }
+  .primary-heading-of-homepage {
+    font-size: 2rem;
+  }
 }
 
 .social-media-container {
-    position: relative;
-    top: 20rem;
-    line-height: 6rem;
+  position: relative;
+  top: 20rem;
+  line-height: 6rem;
 }
 
 .social-media-container i {
-    font-size: 2rem;
-    color: var(--primary-font-color);
-    margin: 0 1rem;
-    border-radius: 50px;
-    /* box-shadow: 24px 24px 48px #c4c4ca, -24px -24px 48px #ffffff;
+  font-size: 2rem;
+  color: var(--primary-font-color);
+  margin: 0 1rem;
+  border-radius: 50px;
+  /* box-shadow: 24px 24px 48px #c4c4ca, -24px -24px 48px #ffffff;
     box-shadow: 12px 12px 16px 0 rgb(0 0 0 / 25%), -8px -8px 12px 0 rgb(255 255 255 / 30%); */
-    border-radius: 50px;
-    padding: 1rem;
+  border-radius: 50px;
+  padding: 1rem;
 }
 
 @media (max-width: 300px) {
-    .social-media-container i {
-        font-size: 1.5rem;
-    }
+  .social-media-container i {
+    font-size: 1.5rem;
+  }
 }
-
+/* 
 .social-media-container i:hover {
-    transition: all .5s;
+  transition: all .5s;
     box-shadow: 24px 24px 48px #c4c4ca, -24px -24px 48px #ffffff;
-    box-shadow: 12px 12px 16px 0 rgb(0 0 0 / 25%), -8px -8px 12px 0 rgb(255 255 255 / 30%);
+    box-shadow: 12px 12px 16px 0 rgb(0 0 0 / 25%), -8px -8px 12px 0 rgb(255 255 255 / 30%); 
+} */
+.social-media-container i:hover {
+  transition: all 0.5s;
+  scale: 1.1;
 }
-
 .fa-instagram:hover {
-    color: #bc2a8d;
+  color: #bc2a8d;
 }
 
 .fa-github:hover {
-    color: #6e5494;
+  color: #6e5494;
 }
 
 .fa-linkedin:hover {
-    color: #0077b5;
+  color: #0077b5;
 }
 
 .fa-envelope:hover {
-    color: rgb(195, 0, 0);
+  color: rgb(195, 0, 0);
 }
 
 .hameburger-container {
-    position: relative;
-    top: 60%;
+  position: relative;
+  top: 60%;
 }
 
 .hameburger-container i {
-    font-size: 2rem;
-}
-
-/* This CSS apply on all pages */
-header {
-    height: 10vh;
-}
-
-body {
-    background-color: var(--primary-color);
-    color: var(--primary-font-color);
+  font-size: 2rem;
 }
 
 .aboutPage-section,
 #projectPage-Main {
-    padding: 0px 10rem;
+  padding: 0px 10rem;
 }
 
-.primary-heading-of-pages {
-    font-size: 7rem;
-    color: var(--light-primary-font-color);
-    font-family: var(--main-font-family);
+.sub-heading-homepage {
+  font-size: 7rem;
+  color: var(--light-primary-font-color);
+  font-family: var(--main-font-family);
 }
-
 @media (max-width: 900px) {
-    .aboutPage-Para p {
-        font-size: 2rem;
-    }
+  .aboutPage-Para p {
+    font-size: 2rem;
+  }
 }
 
 @media only screen and (max-width: 700px) {
-    .primary-heading-of-pages {
-        font-size: 5rem;
-    }
+  .primary-heading-of-pages {
+    font-size: 5rem;
+  }
 
-    .aboutPage-section,
-    #projectPage-Main {
-        padding: 0px 4rem;
-    }
+  .aboutPage-section,
+  #projectPage-Main {
+    padding: 0px 4rem;
+  }
 
-    .aboutPage-Para p {
-        font-size: 1.3rem;
-    }
+  .aboutPage-Para p {
+    font-size: 1.3rem;
+  }
 }
 
 /* Toggle CSS */
 .switch {
-    position: relative;
-    cursor: pointer;
-    width: 40px;
-    height: 40px;
-    box-shadow: 0 5px 25px rgba(0, 0, 0, 0.363);
-    border-radius: 5px;
+  position: relative;
+  cursor: pointer;
+  width: 40px;
+  height: 40px;
+  box-shadow: 0 5px 25px rgba(0, 0, 0, 0.363);
+  border-radius: 5px;
 }
 
 .switch input {
-    opacity: 0;
-    width: 100%;
-    height: 100%;
-    z-index: 1;
-    cursor: pointer;
-    position: absolute;
-    left: 0;
+  opacity: 0;
+  width: 100%;
+  height: 100%;
+  z-index: 1;
+  cursor: pointer;
+  position: absolute;
+  left: 0;
 }
 
 .switch div {
-    width: 80%;
-    height: 80%;
-    margin: 10%;
-    position: absolute;
+  width: 80%;
+  height: 80%;
+  margin: 10%;
+  position: absolute;
 }
 
 .switch span {
-    background: var(--light-primary-font-color);
-    width: 100%;
-    height: 2px;
-    border-radius: 5px;
-    display: block;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    transition: transform 0.5s, width 0.5s;
+  background: var(--dark-primary-font-color);
+  width: 100%;
+  height: 2px;
+  border-radius: 5px;
+  display: block;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  transition: transform 0.5s, width 0.5s;
 }
 
 .switch .line-1 {
-    width: 50%;
-    transform: translate(-100%, -10px);
-    transform-origin: 0 0;
+  width: 50%;
+  transform: translate(-100%, -10px);
+  transform-origin: 0 0;
 }
 
 .switch .line-3 {
-    width: 50%;
-    left: auto;
-    right: 0;
-    transform: translate(0, 10px);
-    transform-origin: 100% 0;
+  width: 50%;
+  left: auto;
+  right: 0;
+  transform: translate(0, 10px);
+  transform-origin: 100% 0;
 }
 
-input:checked+div span.line-1 {
-    transform: translate(0, 0) rotate(-45deg);
+input:checked + div span.line-1 {
+  transform: translate(0, 0) rotate(-45deg);
 }
 
-input:checked+div span.line-3 {
-    transform: translate(-100%, 0) rotate(-45deg);
+input:checked + div span.line-3 {
+  transform: translate(-100%, 0) rotate(-45deg);
 }
 
-input:checked+div span.line-2 {
-    transform: translate(-50%, -50%) rotate(45deg);
+input:checked + div span.line-2 {
+  transform: translate(-50%, -50%) rotate(45deg);
 }
