Color Changed Of Heading In All Page
# Changes to be committed:
#	modified:   main.css

--- a/main.css
+++ b/main.css
@@ -68,7 +68,7 @@ hr{
 }
 .all-page-heading {
   font-size: 7rem;
-  color: var(--dark-primary-font-color);
+  color: var(--primary-font-color);
   font-family: headingOfPage;
 }
 /* Dark Mode Button CSS */
