Navbar image link changed
In the Navbar image tag attribute href link changed & update in a main js file

--- a/contactPage/contactPage.css
+++ b/contactPage/contactPage.css
@@ -163,7 +163,7 @@ background-color: var(--btn-press-bg-color);
     font-size: 1.5rem;
     text-decoration: none;
     font-family: courier-font;
-    color: blue;
+    color: var(--btn-font-color);
 }
 /* Social Network */
 .social-network-box{
