--- a/main.css
+++ b/main.css
@@ -51,7 +51,7 @@
 } */
 body[data-nav="true"] > main {
   transform: translateY(-10%);
-  background-color: var(--bg-color) !important;
+  /* background-color: var(--bg-color) !important; */
 }
 /* body[data-nav="false"] > main{
     background-color: black !important;
@@ -59,6 +59,10 @@ body[data-nav="true"] > main {
 body{
     background-color: var(--bg-color) !important;
     color: var(--primary-font-color);
+    /* background-color: #1f2933; */
+    /* color: #f5f7fa; */
+    /* color: #cbd2d9; */
+   
 }
 /* This CSS apply on all pages */
 header {
@@ -294,6 +298,13 @@ hr{
   .aboutPage-Para p {
     font-size: 1.3rem;
   }
+}
+@media only screen and (max-width: 40rem){
+  .aboutPage-section,
+  #projectPage-Main {
+    padding: 0px 2rem;
+  }
+
 }
 
 /* Toggle CSS */
